# exceptions/errorModel.ts
@@ -1,0 +1,7 @@
+export class ErrorModel {
+  public code?: string;
+
+  public status?: number;
+
+  public metaData?: any;
+}
