# swagger.json
@@ -115,8 +115,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -155,8 +161,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -176,7 +188,7 @@
       ],
       "get": {
         "tags": ["Cards"],
-        "summary": "Get all cards",
+        "summary": "Get a single cards",
         "responses": {
           "200": {
             "description": "OK",
@@ -195,8 +207,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -206,8 +224,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -247,8 +271,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -258,8 +288,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -287,8 +323,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -298,8 +340,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -343,8 +391,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -354,8 +408,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -399,8 +459,14 @@
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
@@ -416,15 +482,20 @@
         "responses": {
           "200": {
             "description": "OK"
-            
           },
           "500": {
             "description": "Failed",
             "schema": {
               "type": "object",
               "properties": {
-                "msg": {
+                "metaData": {
                   "type": "string"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "number"
                 }
               }
             }
